support multiple target streams in parallel
also, move to using jib for building.